{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 140,
  "lineage": "7c8b00fe-eab4-72c3-a9fb-bcd98eaf45d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012ecf4c2687fa705",
            "association_id": "eipassoc-0679dbe28ea79540d",
            "domain": "vpc",
            "id": "eipalloc-012ecf4c2687fa705",
            "instance": "i-0121ff796af0d907e",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0aa12b02b06283633",
            "private_dns": "ip-10-0-1-134.eu-west-1.compute.internal",
            "private_ip": "10.0.1.134",
            "public_dns": "ec2-54-195-172-37.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.172.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.web_traffic",
            "aws_subnet.PUB_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01720b5f421cf0179",
            "arn": "arn:aws:ec2:eu-west-1:631956130113:instance/i-0121ff796af0d907e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0121ff796af0d907e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa12b02b06283633",
            "private_dns": "ip-10-0-1-134.eu-west-1.compute.internal",
            "private_ip": "10.0.1.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f76df11ed217446",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07e8990ce83cd929b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d1cdb19d41baca8",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07e8990ce83cd929b"
            ]
          },
          "dependencies": [
            "aws_security_group.web_traffic",
            "aws_subnet.PUB_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:internet-gateway/igw-0a03a2bc4ca0e3d86",
            "id": "igw-0a03a2bc4ca0e3d86",
            "owner_id": "631956130113",
            "tags": {
              "Name": "primei.it_IGW"
            },
            "tags_all": {
              "Name": "primei.it_IGW"
            },
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ROUTE_TABLE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:route-table/rtb-07ee9f0a4f6c8a4e7",
            "id": "rtb-07ee9f0a4f6c8a4e7",
            "owner_id": "631956130113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a03a2bc4ca0e3d86",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primei.it_ROUTE_TABLE"
            },
            "tags_all": {
              "Name": "primei.it_ROUTE_TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_VPC",
            "aws_internet_gateway.GW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ASS_ROUTE_TABLE_PUB_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029210af9cd83ca1b",
            "route_table_id": "rtb-07ee9f0a4f6c8a4e7",
            "subnet_id": "subnet-09d1cdb19d41baca8"
          },
          "dependencies": [
            "aws_subnet.PUB_A",
            "aws_vpc.main_VPC",
            "aws_internet_gateway.GW",
            "aws_route_table.ROUTE_TABLE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ASS_ROUTE_TABLE_PUB_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b371ac47f81dd95",
            "route_table_id": "rtb-07ee9f0a4f6c8a4e7",
            "subnet_id": "subnet-048fed1e5f1595426"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.ROUTE_TABLE",
            "aws_subnet.PUB_B",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ASS_ROUTE_TABLE_PUB_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d5aa9a815eefa9b",
            "route_table_id": "rtb-07ee9f0a4f6c8a4e7",
            "subnet_id": "subnet-093dadf67a7493806"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.ROUTE_TABLE",
            "aws_subnet.PUB_C",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:security-group/sg-07e8990ce83cd929b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-07e8990ce83cd929b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230107110735659700000001",
            "name_prefix": "terraform-",
            "owner_id": "631956130113",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "primei.it_SECGROUP"
            },
            "tags_all": {
              "Name": "primei.it_SECGROUP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DMZ_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:subnet/subnet-0e50d8d5a511ccf4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e50d8d5a511ccf4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631956130113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primei.it_DMZ_A"
            },
            "tags_all": {
              "Name": "primei.it_DMZ_A"
            },
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DMZ_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:subnet/subnet-05b15af03f0abf13a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b15af03f0abf13a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631956130113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primei.it_DMZ_B"
            },
            "tags_all": {
              "Name": "primei.it_DMZ_B"
            },
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DMZ_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:subnet/subnet-06a54c6c79bf604aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a54c6c79bf604aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631956130113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primei.it_DMZ_C"
            },
            "tags_all": {
              "Name": "primei.it_DMZ_C"
            },
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PUB_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:subnet/subnet-09d1cdb19d41baca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d1cdb19d41baca8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631956130113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primei.it_PUB_A"
            },
            "tags_all": {
              "Name": "primei.it_PUB_A"
            },
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PUB_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:subnet/subnet-048fed1e5f1595426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048fed1e5f1595426",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631956130113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primei.it_PUB_B"
            },
            "tags_all": {
              "Name": "primei.it_PUB_B"
            },
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PUB_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:subnet/subnet-093dadf67a7493806",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093dadf67a7493806",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631956130113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primei.it_PUB_C"
            },
            "tags_all": {
              "Name": "primei.it_PUB_C"
            },
            "vpc_id": "vpc-0fe823668b3ed2113"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:631956130113:vpc/vpc-0fe823668b3ed2113",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05babfdde0b91c47c",
            "default_route_table_id": "rtb-0557562a8df374e6d",
            "default_security_group_id": "sg-0c13b63d30ebc1c6f",
            "dhcp_options_id": "dopt-01163a8c7260cebaa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fe823668b3ed2113",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0557562a8df374e6d",
            "owner_id": "631956130113",
            "tags": {
              "Name": "primei.it"
            },
            "tags_all": {
              "Name": "primei.it"
            }
          }
        }
      ]
    }
  ]
}